--- a/hometasks/HW1_language_detection.ipynb
+++ b/hometasks/HW1_language_detection.ipynb
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Найдите в документации (https://vk.com/dev/wall) метод для получения комментариев и получите первые сто комментариев каждого поста из выборки для каждого паблика."
+    "Найдите в документации (https://vk.com/dev/wall) метод для получения комментариев и получите первые сто комментариев каждого поста из выборки для каждого паблика. Выкидывайте все комментарии, которые содержат меньше 10 символов."
    ]
   },
   {
